Fix copyright wrong font color

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -31,7 +31,7 @@ body {
 
 a {
     text-decoration: none;
-    color: var(--secondary-font-color);
+    color: rgba(255, 255, 255, 0.7);
 }
 
 svg {
